--- a/app/assets/stylesheets/landing.css.sass
+++ b/app/assets/stylesheets/landing.css.sass
@@ -77,7 +77,7 @@ section
 
   &.no-inviter
     max-height: 760px
-    background-image: url(image_path("orange-background.jpg"))
+    background-image: asset-url("orange-background.jpg")
     background-position: center bottom
 
   #logo
@@ -158,7 +158,7 @@ section
       margin-right: 20px
 
 #bottom
-  padding: 50px 0px
+  padding: 50px 0
   background-color: $light-grey-color
   .tag-line
     padding-top: 20px
